--- a/p140/makefile_marco
+++ b/p140/makefile_marco
@@ -13,3 +13,4 @@ all.tar: $(SOURCES) $(HEADERS) makefile
 	tar -cvf - $(SOURCES) $(HEADS) makefile > all.tar
 clean:
 	rm *.o $(TARGET)
+.PHONY: clean
